2006-02-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/objs.*: removed strange ifdefs around certain functions

2006-02-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Reorganized BG Keyring Mod with use of new autonumbering system.
	* Modified SI Fixes to use new autonumbering system.

2006-02-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/databuf.h: StreamDataSource::eof() returns eof before actually
	  having read past the end of file, to make this behave consistently
	  with the other DataSources
	* files/msgfile.*: allow reading text file from DataSource
	* shapes/bodies.cc: read bodies_bg/si from .flx files
	* data/*: moved bodies_bg/si to exult_bg/si.flx

2006-02-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ucparse.yy: Added a way to retrieve the assigned number of a
	  given function. Used like this:
		//If function_name is a defined function, fun will
		//have the correct function number:
		var fun = &function_name;
		//Call function_name indirectly:
		(*fun)();
	* uclex.ll, ucsym.*: Added new '#autonumber' directive to UCC.
	  It turns on 'smart' autonumbering of functions from a given
	  initial value and *ignores* functions with preset function
	  numbers. For example:
		#autonumber 0xC00
		fun1 0xD00 () {/* Code here */}
		fun2 () {/* Code here */}
		fun3 0xA00 () {/* Code here */}
		fun4 () {/* Code here */}
	  This results in fun2 and fun4 having numbers 0xC00 and 0xC01,
	  respectivelly. If the directive is not used, the default
	  ("old-style") autonumbering will be in effect.

2006-02-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added a custom body for Laurianna in the 'BG Keyring Mod'.
	* bodies.cc: Removed checks against old tables.
	* bgintrinsics.h: Added one more SI Intrinsic to BG:
	  create_new_object2.

2006-02-01  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Updating 'SI Fixes' and 'BG Keyring Mod' to use the new #game
	  UCC compiler directive.
